Text align fix.

--- a/streamtestbadge.css
+++ b/streamtestbadge.css
@@ -217,6 +217,7 @@
 	box-sizing: content-box;
 	padding: 16px 5px;
 	white-space: nowrap;
+	text-align: left;
 	text-indent: 42px;
     overflow: hidden; 
 	float: right;
